# gpt-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
gpt_cli/: main.py
